<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NetHack</string>
	<string name="about">About</string>
	<string name="about_msg">Android version 1.3.3\nPort by Fredrik Farnstrom\nfarnstrom@gmail.com\nIcon by Rich Jones (rich@anomos.info)\nKey Bindings and config editor by Michael Barlow (michaelbarlow7@gmail.com)\nSee Preferences screen for key bindings.\nTouch the screen to scroll (if needed).\nUse ? to access in-game help.\nFor more info on how to play the game, see www.nethack.org.\nFor source code and feedback about the Android port, see\nhttp://code.google.com/p/nethack-android/\n</string>
	<string name="about_title">NetHack 3.4.3</string>
	<string name="uimodechanged_msg">The new UI mode will take effect the next time you start the application.</string>
	<string name="uimodechanged_title">UI mode changed</string>
	<string name="configexport_msg">This will make a copy of your NetHack configuration file, on your SD card or elsewhere.</string>
	<string name="configexport_title">Export Configuration File.</string>
	<string name="configexport_failed">Failed to copy to</string>
	<string name="configexport_success">Configuration exported to</string>
	<string name="configimport_msg">This will copy a NetHack configuration file from your SD card or elsewhere, to where the game can read it.</string>
	<string name="configimport_title">Import Configuration File.</string>
	<string name="configimport_failed">Failed to copy from</string>
	<string name="configimport_failed2">If copying from SD card, make sure it\'s not mounted on your PC.</string>
	<string name="configimport_success">Configuration imported from</string>
	<string name="configimport_success2">These settings will take effect the next time the application starts.</string>
	<string name="preferences_export_title">Export Preferences</string>
	<string name="preferences_export_message">This will make a copy of your NetHack preference file, on your SD card or elsewhere.</string>
	<string name="preferences_import_title">Import Preferences</string>
	<string name="preferences_import_message">This will copy a NetHack preferences file from your SD card or elsewhere, to where the game can read it.</string>
	<string name="preferences_import_success">Preferences imported from</string>
	<string name="keybindings_export_title">Export Key Bindings</string>
	<string name="keybindings_export_message">This will make a copy of your NetHack keybindings file, on your SD card or elsewhere.</string>
	<string name="keybindings_import_title">Import Key Bindings</string>
	<string name="keybindings_import_message">This will copy a NetHack keybindings file from your SD card or elsewhere, to where the game can read it.</string>
	<string name="keybindings_import_success">Key Bindings imported from</string>
	<string name="keybindings_export_success">Key Bindings exported to</string>
	<string name="everything_export_success">Everything exported to</string>
	<string name="export_everything_message">This will make a copy of your NetHack settings files, on your SD card or elsewhere.</string>
	<string name="backup_default_directory">/sdcard/</string>
	<string name="config_defaultfile">/sdcard/NetHack.cnf</string>
	<string name="preferences_defaultfile">/sdcard/com.nethackff_preferences.xml</string>
	<string name="keybindings_defaultfile">/sdcard/keyMapPreferences.xml</string>
	<string name="dialog_OK">OK</string>
	<string name="dialog_Cancel">Cancel</string>
	<string name="dialog_Success">Success</string>
	<string name="dialog_Error">Error</string>
	<string name="dialog_msg_ask_install_location">Please choose where to install data files (SD card is recommended).</string>
	<string name="dialog_msg_existing_external_installation_unavailable">An existing installation was expected on the SD card, but it doesn\'t seem to be available. Please choose an action.</string>
	<string name="dialog_msg_install_progress">Installing at</string>
	<string name="dialog_msg_move_install_progress">Moving to</string>
	<string name="dialog_msg_move_old_installation">An existing installation was found in internal memory. This version of NetHack normally installs data files on the SD card. Do you want to move the existing installation? Save game files should be preserved.</string>
	<string name="dialog_msg_sd_card_not_found">The application normally stores data on the SD card, but there was a problem accessing it. Please choose an action.</string>
	<string name="dialog_button_exit">Exit</string>
	<string name="dialog_button_install_on_internal_memory">Internal Memory</string>
	<string name="dialog_button_install_on_sd_card">Install on SD Card</string>
	<string name="dialog_button_keep_existing_installation">Keep Existing Installation</string>
	<string name="dialog_button_move_to_sd_card">Move to SD card</string>
	<string name="dialog_button_retry">Retry</string>
	<string name="dialog_button_reinstall_on_internal_memory">Reinstall on Internal Memory</string>
	<string name="dialog_button_use_internal_memory">Use Internal Memory</string>
	<string name="backup_everything">Backup Everything</string>
	<string name="backup_config">Backup Config</string>
	<string name="backup_preferences">Backup Preferences</string>
	<string name="backup_keybindings">Backup Keybindings</string>
	<string name="import_config">Import Config</string>
	<string name="import_preferences">Import Preferences</string>
	<string name="import_keybindings">Import Keybindings</string>
	<string name="preferences">Preferences</string>
	<string-array name="KeyActions">
		<item>None</item>
		<item>Virtual Keyboard</item>
		<item>Alt Key</item>
		<item>Ctrl Key</item>
		<item>Shift Key</item>
		<item>Esc Key</item>
		<item>Zoom In</item>
		<item>Zoom Out</item>
		<item>Forward to System</item>
	</string-array>
	<string-array name="KeyActionValues">
		<item>None</item>
		<item>VirtualKeyboard</item>
		<item>AltKey</item>
		<item>CtrlKey</item>
		<item>ShiftKey</item>
		<item>EscKey</item>
		<item>ZoomIn</item>
		<item>ZoomOut</item>
		<item>ForwardToSystem</item>
	</string-array>
	<string-array name="UIModeEntries">
		<item>Pure TTY</item>
		<item>Android TTY</item>
		<item>Android Tiled</item>
	</string-array>
	<string-array name="UIModeValues">
		<item>PureTTY</item>
		<item>AndroidTTY</item>
		<item>AndroidTiled</item>
	</string-array>
	<string-array name="ColorModeEntries">
		<item>Black</item>
		<item>White</item>
	</string-array>
	<string-array name="ColorModeValues">
		<item>WhiteOnBlack</item>
		<item>BlackOnWhite</item>
	</string-array>
	<string-array name="FontSizeEntries">
		<item>10 pt</item>
		<item>11 pt</item>
		<item>12 pt</item>
		<item>13 pt</item>
		<item>14 pt</item>
		<item>15 pt</item>
	</string-array>
	<string-array name="FontSizeValues">
		<item>FontSize10</item>
		<item>FontSize11</item>
		<item>FontSize12</item>
		<item>FontSize13</item>
		<item>FontSize14</item>
		<item>FontSize15</item>
	</string-array>
	<string-array name="TouchscreenTapEntries">
		<item>Nothing</item>
		<item>3x3 Grid</item>
		<item>Mouse Click</item>
	</string-array>
	<string-array name="TouchscreenTapValues">
		<item>Disabled</item>
		<item>Grid3x3</item>
		<item>MouseClick</item>
	</string-array>
	<string-array name="TouchscreenHoldEntries">
		<item>Nothing</item>
		<item>Mouse Click</item>
		<item>Center on Location</item>
		<item>Center on Player</item>
	</string-array>
	<string-array name="TouchscreenHoldValues">
		<item>Disabled</item>
		<item>MouseClick</item>
		<item>CenterOnLocation</item>
		<item>CenterOnPlayer</item>
	</string-array>
	<string-array name="CharacterSetEntries">
		<item>128 char ANSI</item>
		<item>IBM</item>
		<item>Amiga</item>
	</string-array>
	<string-array name="CharacterSetValues">
		<item>ANSI128</item>
		<item>IBM</item>
		<item>Amiga</item>
	</string-array>
	<string-array name="CharacterColorSetEntries">
		<item>16 color ANSI terminal</item>
		<item>IBM</item>
		<item>Amiga</item>
	</string-array>
	<string-array name="CharacterColorSetValues">
		<item>AnsiTerminal</item>
		<item>IBM</item>
		<item>Amiga</item>
	</string-array>
	<string-array name="OrientationEntries">
		<item>Sensor</item>
		<item>Portrait</item>
		<item>Landscape</item>
		<item>Unspecified</item>
	</string-array>
	<string-array name="OrientationValues">
		<item>Sensor</item>
		<item>Portrait</item>
		<item>Landscape</item>
		<item>Unspecified</item>
	</string-array>
	<string-array name="BackupSettingsEntries">
	    <item>@string/backup_everything</item>
	    <item>@string/backup_config</item>
	    <item>@string/backup_preferences</item>
	    <item>@string/backup_keybindings</item>
	    <item>@string/import_config</item>
	    <item>@string/import_preferences</item>
	    <item>@string/import_keybindings</item>
	</string-array>
	
	<string name="edit_config">Edit Config</string>
	<string name="keyMapPreferences">keyMapPreferences</string>
	<string name="add_key_binding">Add Key Binding</string>
	<string name="dialog_get_key_title">Key to bind</string>
	<string name="dialog_get_key_default_message">(press a key to change)</string>
	<string name="dialog_get_nethack_key_message">Choose a character to bind the system key to</string>
	<string name="dialog_key_binding_change">Change</string>
	<string name="dialog_key_binding_delete">Delete</string>
	<string name="please_select_a_character">Please select a character</string>
	<string name="please_select_a_key">Please select a key</string>
	<string name="cant_bind_menu_key">Can\'t bind MENU key</string>
	<string name="bind_to_action">Bind to other key</string>
	<string name="bind_to_character">Bind to character</string>
	<string name="reset_to_defaults">Reset to defaults</string>
	<string name="clear_all">Clear all</string>
    <string name="file_not_found">File not found</string>
    <string name="error_reading_file">Error while reading file</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_save">Save</string>
    <string name="config_saved">Config saved</string>
    <string name="error_writing_file">Error while writing file</string>
    <string name="warning_unsaved_changes_title">Text modified</string>
    <string name="warning_unsaved_changes_message">Do you want to save the changes?</string>
    <string name="button_save">Save</string>
    <string name="button_dont_save">Don\'t save</string>
</resources>
