<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >
    <TextView
        android:id="@android:id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dialog_get_nethack_key_message" />
    <EditText
        android:id="@+id/character_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@android:id/message"
        android:gravity="center"
        android:inputType="text"
        android:maxLength="1"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_field"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:text="@string/dialog_OK"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/negativeButton"
            android:text="@string/dialog_Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>